# machine_learning

./: .envrc  .flake8  .gitignore  .gitmodules  .nbqa.ini  .pre-commit-config.yaml  Pipfile  README.md  jpnb_qa_check.sh  jupyter_notebook_and_vscode.md  machine_learning.code-workspace  ml_dev_environment_setup.md  nvidia_gpu_reset.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run_nbqa.sh  runonsave.sh  setup.cfg  start_jupyter.sh
agentic_engineering/: codemode.md  mcp.md
azure/: azure_big_data.md
coding_agents/: antigravity.md  claude_code.md  claude_code_practices.md  github_copilot.md  my_workflow.md
data_engineering/: tools_and_frameworks.md
data_preparation/: readme.md
data_preparation/1_data_leakage/: using_cross_validation.ipynb  using_train_test_split.ipynb
data_preparation/2_basic_data_cleaning/: automatic_outlier_detection.ipynb  data_cleaning.ipynb  iris_readme.md  oil_spill_readme.md  outliers.ipynb
data_preparation/3_missing_values/: imputation.ipynb  iterative_imputation.ipynb  knn_imputation.ipynb  remove_missing_values.ipynb  simple_vs_stratified_sampling.ipynb  statistical_imputation.ipynb
deep_learning/: activation_functions.md  weights_random_initialization.md
deep_learning_from_scratch_weidman/: intro.md
deep_learning_from_scratch_weidman/1_foundations/: foundations_code_snippets.ipynb
deep_learning_from_scratch_weidman/2_chapter/: fundamentals.ipynb
fastai_deep_learning_book/: readme.md
fastai_deep_learning_book/1_intro/: cats_vs_dogs.ipynb  fastai_intro.ipynb
fastai_deep_learning_book/2_model_to_production/: bear_classifier_voila_app.ipynb  fastai_dataloaders.ipynb  voila_test_app.ipynb
fastai_deep_learning_book/4_under_the_hood/: training_digit_classifier.ipynb
hands_on_ml_book/: readme.md
hands_on_ml_book/10_artificial_neural_networks/: ann_introduction.ipynb  ann_perceptron.ipynb  keras_classification.ipynb  keras_functional_api.ipynb  keras_regression.ipynb  notes.md  subclassing_keras_model.ipynb  using_tensorboard.ipynb
hands_on_ml_book/11_training_dnn_models/: notes.md
hands_on_ml_book/12_custom_training/: custom_components.ipynb  tensorflow_and_numpy.ipynb
hands_on_ml_book/13_data_preprocessing_using_tensorflow/: preprocessing_with_tensorflow.ipynb
hands_on_ml_book/14_convolutional_neural_networks/: cnn.ipynb  notes.md
hands_on_ml_book/15_recurrent_neural_networks/: rnn.ipynb
hands_on_ml_book/1_intro/: gdp_per_capita.ipynb  notes.md
hands_on_ml_book/2_end_to_end_ml/: housing_prediction.ipynb  notes.md
hands_on_ml_book/3_classification/: mnist_classification.ipynb
hands_on_ml_book/4_training_models/: regression.md
hands_on_ml_book/7_ensemble_learning/: stacking_vs_blending.md
hands_on_ml_book/8_dimensionality_reduction/: pca.ipynb
kaggle/: kaggle_competitions.md
lecun_deep_learning_course/: README.md
llm/: rag.md
maths/: backpropagation.md  gram_matrix.md
ml_andrew_ng/: README.md
ml_andrew_ng/math_notes/: normal_equation_proof.md
ml_concepts/: categorical_data_preprocessing.md  categorical_features_and_tree_based_algorithms.ipynb  common_machine_learning_problems.md  confidence_interval.md  cross_validation.md  distances.md  feature_hashing.md  feature_scaling.md  feature_selection.md  handling_features_with_missing_values.md  hyper_parameters.md  hyperparameter_tuning.md  information_theory_basics.md  normality_tests.md  numerical_feature_preprocessing.md  one_hot_encoding_pros_cons.ipynb  overfit_underfit.md  r_squared_vs_adjusted_r_squared.md  target_encoding.ipynb  test_and_validation_set.md
ml_concepts/plots/: normality.ipynb
tools/: datasets.md
tools/jupyter_notebook/: changing_jupyter_theme.md  colab_with_github_repo.md  connect_colab_to_local_jupyter.md  jupyter_tricks.ipynb  (+7 more)
(+41 files in other folders)
