[tool.black]
line-length = 100
target-version = ['py38']

[tool.poetry]
authors = ["girish pasupathy <girishpasupathy@gmail.com>"]
description = "Machine learning."
license = "MIT"
name = "Machine learning"
version = "0.1.0"

[tool.poetry.dependencies]
azure-cognitiveservices-search-imagesearch = "^2.0.0"
catboost = "^0.26.1"
category-encoders = "^2.2.2"
graphviz = "^0.17"
humanize = "^3.11.0"
ipywidgets = "^7.6.3"
lightgbm = "^3.2.1"
matplotlib = "^3.4.3"
numpy = "1.19.5"
pandas = "^1.3.1"
pydot = "^1.4.2"
python = "^3.8"
scikit-learn = "^0.24.2"
seaborn = "^0.11.1"
seaborn-qqplot = "^0.5.0"
sentencepiece = "^0.1.96"
tensorflow = "^2.6.0"
# unable to install torch using poetry. Used pip to install the below
# torch = {url = "https://download.pytorch.org/whl/cu111/torch-1.9.0%2Bcu111-cp38-cp38-linux_x86_64.whl"}
# torchvision = {url = "https://download.pytorch.org/whl/cu111/torchvision-0.10.0%2Bcu111-cp38-cp38-linux_x86_64.whl"}
#fastai=
#fastbook=
voila = "^0.2.10"
xgboost = "^1.4.2"
xlrd = "^2.0.1"

[tool.poetry.dev-dependencies]
GPUtil = "^1.4.0"
autoflake = "^1.4"
black = "^21.7b0"
flake8 = "^3.9.2"
ipykernel = "^6.1.0"
ipython = "^7.26.0"
isort = "^5.9.3"
jupyter-http-over-ws = "^0.0.8"
mypy = "^0.910"
nbqa = "^1.1.0"
pre-commit = "^2.17.0"
psutil = "^5.8.0"
pydocstyle = "^6.1.1"
pytest = "^6.2.4"
pyupgrade = "^2.23.3"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
